--- a/ONE-PEACE/one_peace/run_scripts/image_text_retrieval/base.yaml
+++ b/ONE-PEACE/one_peace/run_scripts/image_text_retrieval/base.yaml
@@ -1,14 +1,14 @@
 
-default_yaml: ../finetune_3B.yaml
+default_yaml: /workspace/jaeyoung/StoryTeller/ONE-PEACE/one_peace/run_scripts/finetune_3B.yaml
 
 task:
   _name: image_text_retrieval
   data: ???
   valid_data: ???
   # selected_cols: image_id,image,caption
-  selected_cols: audiopath,caption1,caption2,caption3,caption4,caption5,emotion
+  selected_cols: filename,caption1,caption2,caption3,caption4,caption5,emotion
   patch_image_size: 256
-  valid_file: None
+  valid_file: /workspace/jaeyoung/StoryTeller/merged_caption_MMTTS.csv
 
 criterion:
   _name: image_text_retrieval_criterion
@@ -25,7 +25,7 @@ lr_scheduler:
   warmup_ratio: 0.1
 
 dataset:
-  batch_size: 2
+  batch_size: 8
   ensure_equal_batch: true
 
 common:
@@ -33,6 +33,7 @@ common:
 
 checkpoint:
   best_checkpoint_metric: txt_r1
+  save_dir: /workspace/jaeyoung/checkpoints/one_peace/mmtts_vl_0907
 
 model:
   _name: one_peace_retrieval
