--- a/ONE-PEACE/one_peace/run_scripts/image_text_retrieval/base.yaml
+++ b/ONE-PEACE/one_peace/run_scripts/image_text_retrieval/base.yaml
@@ -3,20 +3,20 @@ default_yaml: /workspace/jaeyoung/StoryTeller/ONE-PEACE/one_peace/run_scripts/fi
 
 task:
   _name: image_text_retrieval
-  data: ???
-  valid_data: ???
+  data: /workspace/jaeyoung/StoryTeller/merged_caption_MMTTS.csv
+  valid_data: /workspace/jaeyoung/StoryTeller/valid1000_merged_caption_MMTTS.csv
   # selected_cols: image_id,image,caption
   selected_cols: filename,caption1,caption2,caption3,caption4,caption5,emotion
   patch_image_size: 256
-  valid_file: /workspace/jaeyoung/StoryTeller/merged_caption_MMTTS.csv
+  valid_file: /workspace/jaeyoung/StoryTeller/valid1000_merged_caption_MMTTS.csv
 
 criterion:
   _name: image_text_retrieval_criterion
   label_smoothing: 0.0
 
 optimization:
-  max_epoch: ???
-  lr: ???
+  max_epoch: 5
+  lr: [1.5e-4]
   update_freq: [1]
   skip_remainder_batch: false 
 
