code update for image&audio retrieval finetuning

--- a/ONE-PEACE/one_peace/run_scripts/audio_text_retrieval/base.yaml
+++ b/ONE-PEACE/one_peace/run_scripts/audio_text_retrieval/base.yaml
@@ -1,13 +1,12 @@
 
-default_yaml: ../finetune_3B.yaml
+default_yaml: /workspace/jaeyoung/StoryTeller/ONE-PEACE/one_peace/run_scripts/finetune_3B.yaml
 
 task:
   _name: audio_text_retrieval
-  data: ../../dataset/macs/merge_clotho_audiocaps_macs.tsv
-  valid_data: ../../dataset/audiocaps/audiocaps_val_new.tsv
-  selected_cols: uniq_id,audio,text,duration
-  valid_file: ../../dataset/audiocaps/val_texts.json
-
+  data: /workspace/jaeyoung/StoryTeller/merged_caption_MMTTS.csv
+  valid_data: /workspace/jaeyoung/StoryTeller/valid1000_merged_caption_MMTTS.csv
+  selected_cols: filename,caption1,caption2,caption3,caption4,caption5
+  valid_file: /workspace/jaeyoung/StoryTeller/valid1000_merged_caption_MMTTS.csv
   max_duration: 20
   head_type: al
 
@@ -22,14 +21,18 @@ optimization:
   skip_remainder_batch: false
 
 dataset:
-  batch_size: 2
+  batch_size: 16
   ensure_equal_batch: true
 
 common:
   layer_decay: 0.95
 
 checkpoint:
+  restore_file: /workspace/jaeyoung/checkpoints/one-peace_pretrained.pt
+  save_dir: /workspace/jaeyoung/checkpoints/one_peace/mmtts_al_vl_0908
   best_checkpoint_metric: txt_r1
+
+
 
 model:
   _name: one_peace_retrieval
