--- a/ONE-PEACE/one_peace/run_scripts/image_text_retrieval/base.yaml
+++ b/ONE-PEACE/one_peace/run_scripts/image_text_retrieval/base.yaml
@@ -6,7 +6,7 @@ task:
   data: /workspace/jaeyoung/StoryTeller/merged_caption_MMTTS.csv
   valid_data: /workspace/jaeyoung/StoryTeller/valid1000_merged_caption_MMTTS.csv
   # selected_cols: image_id,image,caption
-  selected_cols: filename,caption1,caption2,caption3,caption4,caption5,emotion
+  selected_cols: filename,caption1,caption2,caption3,caption4,caption5
   patch_image_size: 256
   valid_file: /workspace/jaeyoung/StoryTeller/valid1000_merged_caption_MMTTS.csv
 
@@ -25,15 +25,19 @@ lr_scheduler:
   warmup_ratio: 0.1
 
 dataset:
-  batch_size: 8
+  batch_size: 16
   ensure_equal_batch: true
 
 common:
   layer_decay: 0.9
 
 checkpoint:
+  # restore_file: /workspace/jaeyoung/checkpoints/one-peace_pretrained.pt
+  restore_file: /workspace/jaeyoung/checkpoints/one_peace/mmtts_vl_0907/checkpoint_best.pt
+  # save_dir: /workspace/jaeyoung/checkpoints/one_peace/mmtts_vl_0907
+  save_dir: /workspace/jaeyoung/checkpoints/one_peace/mmtts_vl_0907_lr2e-6
   best_checkpoint_metric: txt_r1
-  save_dir: /workspace/jaeyoung/checkpoints/one_peace/mmtts_vl_0907
+
 
 model:
   _name: one_peace_retrieval
