adjust size based on GPU capacity

--- a/emotion_vits/requirements.txt
+++ b/emotion_vits/requirements.txt
@@ -7,7 +7,15 @@ scipy==1.5.2
 tensorboard==2.3.0
 torch==1.6.0
 torchvision==0.7.0
-Unidecode
 torchaudio
+
+
+tqdm
+pandas
+Unidecode
+phonemizer
+typing_extensions
 scipy
 soundfile
+espeak
+
