--- a/ONE-PEACE/requirements.txt
+++ b/ONE-PEACE/requirements.txt
@@ -12,3 +12,7 @@ pydub==0.25.1
 scikit-learn==1.0.2
 librosa==0.10.0
 wget==3.2
+pandas==2.2.3
+phonemizer==3.3.0
+tensorboard==2.18.0
+Unidecode==1.3.8
